<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/backgrnd"
    android:transitionName="login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="164dp"
        android:layout_height="167dp"
        android:layout_above="@+id/lcoName"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logoLCO"
        android:transitionName="logo"
        app:srcCompat="@drawable/lco"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/lcoName"
        style="@android:style/Widget.Holo.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="225dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/learncodeonline"
        android:textColor="#516E90"
        android:textSize="50sp"
        android:transitionName="lcoName"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="212dp" />

    <ImageView
        android:id="@+id/signup"
        android:layout_width="99dp"
        android:layout_height="84dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="105dp"
        android:layout_marginStart="77dp"
        app:srcCompat="@mipmap/backgrnd"
        android:transitionName="signup"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lcoName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-225dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/tech_video_courses"
        android:textColor="#8EA6C2"
        android:textSize="30sp" />
</RelativeLayout>